replaced streams and nio